<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/walksheetlightbackground"
    tools:context=".activities.SearchVoter">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tl_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/searchforvoter"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbartextsize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tl_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tl_toolbar" />

        <ImageView
            android:id="@+id/iv_searchvoterbackpress"
            android:layout_width="@dimen/backpresswidthandheight"
            android:layout_height="@dimen/backpresswidthandheight"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/tl_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tl_toolbar" />

        <TextView
            android:id="@+id/tv_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/lato_regular"
            android:text="First Name"
            android:textColor="@color/bachkroundscreencolor"
            android:textSize="@dimen/textsize"
            app:layout_constraintStart_toStartOf="@+id/et_firstname"
            app:layout_constraintTop_toBottomOf="@+id/tl_toolbar" />

        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittextbackground"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_firstname" />

        <TextView
            android:id="@+id/tv_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_regular"
            android:text="Last Name"
            android:textColor="@color/bachkroundscreencolor"
            android:textSize="@dimen/textsize"
            app:layout_constraintStart_toStartOf="@+id/et_lastname"
            app:layout_constraintTop_toBottomOf="@+id/et_firstname" />

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittextbackground"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lastname" />

        <TextView
            android:id="@+id/tv_housenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_regular"
            android:text="House Number"
            android:textColor="@color/bachkroundscreencolor"
            android:textSize="@dimen/textsize"
            app:layout_constraintStart_toStartOf="@+id/et_housenumber"
            app:layout_constraintTop_toBottomOf="@+id/et_lastname" />

        <EditText
            android:id="@+id/et_housenumber"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittextbackground"
            android:paddingLeft="10dp"
            android:maxLines="1"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_housenumber" />

        <TextView
            android:id="@+id/tv_streetname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_regular"
            android:text="Street"
            android:textColor="@color/bachkroundscreencolor"
            android:textSize="@dimen/textsize"
            app:layout_constraintStart_toStartOf="@+id/et_streetname"
            app:layout_constraintTop_toBottomOf="@+id/et_housenumber" />

        <EditText
            android:id="@+id/et_streetname"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittextbackground"
            android:paddingLeft="10dp"
            android:maxLines="1"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_streetname" />


        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/backgroundbutton"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/searchvoters"
            android:textColor="@color/white"
            android:textSize="@dimen/buttontextsize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/et_streetname"
            app:layout_constraintStart_toStartOf="@+id/et_streetname"
            app:layout_constraintTop_toBottomOf="@+id/et_streetname" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_searchvoters"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="@+id/et_streetname"
            app:layout_constraintEnd_toEndOf="@+id/et_streetname"
            app:layout_constraintTop_toBottomOf="@+id/tv_search"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_voternodatafound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nodatafound"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/et_streetname"
            app:layout_constraintEnd_toEndOf="@+id/et_streetname"
            app:layout_constraintTop_toBottomOf="@+id/tv_search"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>